@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-02-08T08:08:40Z",
-  "count_outdated" : 672,
-  "uniques_outdated" : 322,
+  "timestamp" : "2024-02-08T16:07:41Z",
+  "count_outdated" : 674,
+  "uniques_outdated" : 323,
   "count" : 702,
   "uniques" : 337,
   "clones" : [
-    {
-      "timestamp": "2024-01-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-01-26T00:00:00Z",
       "count": 2,
