@@ -1,3 +1,12 @@
+2024-02-08T16:07:41Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7832482885 # 98
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-08
+* notice: last 14d: unq all: 1 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 322 672 / 337 702
+* notice: next accum: outdated-unq outdated-all / unq all: 323 674 / 337 702
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-01-25] / []
+
 2024-02-08T08:08:40Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7826597745 # 97
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-08
